tests/suite/manifests/session-persistence/cookie-oss-backends.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cookie-coffee
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cookie-coffee
  template:
    metadata:
      labels:
        app: cookie-coffee
    spec:
      containers:
      - name: cookie-coffee
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cookie-coffee
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: cookie-coffee
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cookie-tea
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cookie-tea
  template:
    metadata:
      labels:
        app: cookie-tea
    spec:
      containers:
      - name: cookie-tea
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cookie-tea
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: cookie-tea
---
apiVersion: v1
kind: Service
metadata:
  name: cookie-grpc-backend
spec:
  selector:
    app: cookie-grpc-backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cookie-grpc-backend
  labels:
    app: cookie-grpc-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cookie-grpc-backend
  template:
    metadata:
      labels:
        app: cookie-grpc-backend
    spec:
      containers:
      - name: cookie-grpc-backend
        image: ghcr.io/nginx/kic-test-grpc-server:0.2.6
        ports:
        - containerPort: 50051
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        readinessProbe:
          tcpSocket:
            port: 50051
        resources:
          requests:
            cpu: 10m
