tests/suite/manifests/session-persistence/route-invalid-sp-config.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-invalid-sp
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "cafe.example.com"
  rules:
  - matches:
    - path:
        type: Exact
        value: /
    backendRefs:
    - name: tea
      port: 80
    sessionPersistence:
      sessionName: invalid-config
      type: Header
      absoluteTimeout: 10000h # duration too long for NGINX
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpc-route-invalid-sp
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  rules:
  - matches:
    - method:
        service: helloworld.Greeter
        method: SayHello
    backendRefs:
    - name: grpc-backend
      port: 8080
    sessionPersistence:
      sessionName: invalid-config
      type: Header
      absoluteTimeout: 10000h # duration too long for NGINX
