tests/suite/manifests/session-persistence/routes-oss.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coffee
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "cafe.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /coffee
    backendRefs:
    - name: coffee
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpc-route
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  rules:
  - matches:
    - method:
        service: helloworld.Greeter
        method: SayHello
    backendRefs:
    - name: grpc-backend
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cookie-coffee
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "cafe.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /cookie-coffee
    backendRefs:
    - name: cookie-coffee
      port: 80
    sessionPersistence:
      type: Cookie
      absoluteTimeout: 48h
      cookieConfig:
        lifetimeType: Permanent
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cookie-tea
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "cafe.example.com"
  rules:
  - matches:
    - path:
        type: RegularExpression
        value: /cookie-tea/[a-z]+/flavors
    backendRefs:
    - name: cookie-tea
      port: 80
    sessionPersistence:
      sessionName: cookie-tea-name
      type: Cookie
      absoluteTimeout: 48h
      cookieConfig:
        lifetimeType: Session
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: cookie-grpc-route
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  rules:
  - matches:
    - method:
        service: helloworld.Greeter
        method: SayHello
    backendRefs:
    - name: cookie-grpc-backend
      port: 8080
    sessionPersistence:
      type: Cookie
      absoluteTimeout: 24h
      cookieConfig:
        lifetimeType: Permanent
